<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".TentangActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="350dp"
            android:layout_height="220dp"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            app:cardCornerRadius="40dp">

            <LinearLayout
                android:layout_width="300dp"
                android:layout_height="190dp"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:layout_gravity="center"
                    android:layout_marginStart="10dp"
                    android:src="@drawable/a1" />

                <Space
                    android:layout_width="50dp"
                    android:layout_height="10dp" />

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:src="@drawable/logo_app" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:text="@string/app_name"
            android:textColor="#3949AB"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="290dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="15dp"
            android:text="@string/desc_app"
            android:textAlignment="center" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/eko_prasetyo"
            android:textColor="#0C0CFE"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/nim"
            android:textColor="#0C0CFE"
            android:textSize="18sp"
            android:textStyle="bold" />
    </LinearLayout>

    <ImageButton
        android:id="@+id/btn_bck5"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="30dp"
        android:background="@drawable/button" />
</RelativeLayout>